--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <ul class="menu-songs">
                             <li><a href="https://saraikoyoc.github.io/saraikoyoccancancionero/">Cancionero</a></li>
                             <li><a href="http://mecanicasarikoyoc.lovestoblog.com/?i=2">Mecánica</a></li>
-                            <li><a href="https://pamelaalcocer.github.io/NailsChanbingSalon/">Parcial 2</a></li>
+                            <li><a href="https://saraikoyoc.github.io/nailschanbingsalon/">Parcial 2</a></li>
                             <li><a href="">Ordinario</a></li>
                         </ul>
                     </nav>
