--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <td bgcolor="#ff0055" class="song-list-cell">
                     <nav>
                         <ul class="menu-songs">
-                            <li><a href="https://saraikoyoc.github.io/saraikoyoccancancionero/">Cancionero</a></li>
-                            <li><a href="http://mecanicasarikoyoc.lovestoblog.com/?i=2">Mecánica</a></li>
+                            <li><a href="https://saraikoyoc.github.io/Cancionero/">Cancionero</a></li>
+                            <li><a href="https://saraikoyoc.github.io/Mecanica/">Mecánica</a></li>
                             <li><a href="https://saraikoyoc.github.io/nailschanbingsalon/">Parcial 2</a></li>
                             <li><a href="">Ordinario</a></li>
                         </ul>
